[package]
name = "io_agent"
version = "0.1.0"
authors = ["Shuocheng Wang <wangshch5@outlook.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.80"
lazy_static = "1.1.0"

[build-dependencies]
cc = "1.0"

[lib]
name = "io_agent"
crate-type = ["staticlib"]